@@ -2,6 +2,7 @@ package de.tum.cit.aet.artemis.lti.service;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.anyMap;
 import static org.mockito.Mockito.anyString;
 import static org.mockito.Mockito.mock;
@@ -12,8 +13,8 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -32,19 +33,31 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
+import de.tum.cit.aet.artemis.atlas.domain.competency.Competency;
 import de.tum.cit.aet.artemis.core.domain.Course;
 import de.tum.cit.aet.artemis.core.exception.BadRequestAlertException;
+import de.tum.cit.aet.artemis.core.test_repository.CourseTestRepository;
 import de.tum.cit.aet.artemis.exercise.domain.Exercise;
+import de.tum.cit.aet.artemis.exercise.domain.IncludedInOverallScore;
 import de.tum.cit.aet.artemis.exercise.repository.ExerciseTestRepository;
+import de.tum.cit.aet.artemis.lecture.domain.Lecture;
+import de.tum.cit.aet.artemis.lecture.repository.LectureRepository;
 import de.tum.cit.aet.artemis.lti.config.Lti13TokenRetriever;
 import de.tum.cit.aet.artemis.lti.domain.OnlineCourseConfiguration;
+import de.tum.cit.aet.artemis.lti.dto.LtiContentItem;
 import de.tum.cit.aet.artemis.text.domain.TextExercise;
 import uk.ac.ox.ctl.lti13.lti.Claims;
 
 class LtiDeepLinkingServiceTest {
 
     @Mock
+    private CourseTestRepository courseRepository;
+
+    @Mock
     private ExerciseTestRepository exerciseRepository;
+
+    @Mock
+    LectureRepository lectureRepository;
 
     @Mock
     private Lti13TokenRetriever tokenRetriever;
@@ -60,7 +73,7 @@ class LtiDeepLinkingServiceTest {
         closeable = MockitoAnnotations.openMocks(this);
         oidcIdToken = mock(OidcIdToken.class);
         SecurityContextHolder.clearContext();
-        ltiDeepLinkingService = new LtiDeepLinkingService(exerciseRepository, tokenRetriever);
+        ltiDeepLinkingService = new LtiDeepLinkingService(courseRepository, exerciseRepository, lectureRepository, tokenRetriever);
         ReflectionTestUtils.setField(ltiDeepLinkingService, "artemisServerUrl", "http://artemis.com");
     }
 
@@ -77,7 +90,7 @@ class LtiDeepLinkingServiceTest {
         when(tokenRetriever.createDeepLinkingJWT(anyString(), anyMap())).thenReturn("test_jwt");
 
         DeepLinkCourseExercises result = createTestExercisesForDeepLinking();
-        String deepLinkResponse = ltiDeepLinkingService.performDeepLinking(oidcIdToken, "test_registration_id", result.courseId(), result.exerciseSet());
+        String deepLinkResponse = ltiDeepLinkingService.performDeepLinking(oidcIdToken, "test_registration_id", result.courseId(), result.exerciseSet(), DeepLinkingType.EXERCISE);
 
         assertThat(deepLinkResponse).isNotNull();
         assertThat(deepLinkResponse).contains("test_jwt");
@@ -90,7 +103,7 @@ class LtiDeepLinkingServiceTest {
 
         DeepLinkCourseExercises result = createTestExercisesForDeepLinking();
         assertThatExceptionOfType(BadRequestAlertException.class)
-                .isThrownBy(() -> ltiDeepLinkingService.performDeepLinking(oidcIdToken, "test_registration_id", result.courseId, result.exerciseSet))
+                .isThrownBy(() -> ltiDeepLinkingService.performDeepLinking(oidcIdToken, "test_registration_id", result.courseId, result.exerciseSet, DeepLinkingType.EXERCISE))
                 .withMessage("Deep linking response cannot be created")
                 .matches(exception -> "LTI".equals(exception.getEntityName()) && "deepLinkingResponseFailed".equals(exception.getErrorKey()));
     }
@@ -129,7 +142,7 @@ class LtiDeepLinkingServiceTest {
 
         DeepLinkCourseExercises result = createTestExercisesForDeepLinking();
         assertThatExceptionOfType(BadRequestAlertException.class)
-                .isThrownBy(() -> ltiDeepLinkingService.performDeepLinking(oidcIdToken, "test_registration_id", result.courseId, result.exerciseSet))
+                .isThrownBy(() -> ltiDeepLinkingService.performDeepLinking(oidcIdToken, "test_registration_id", result.courseId, result.exerciseSet, DeepLinkingType.EXERCISE))
                 .withMessage("Cannot find platform return URL")
                 .matches(exception -> "LTI".equals(exception.getEntityName()) && "deepLinkReturnURLEmpty".equals(exception.getErrorKey()));
     }
@@ -142,8 +155,189 @@ class LtiDeepLinkingServiceTest {
 
         DeepLinkCourseExercises result = createTestExercisesForDeepLinking();
         assertThatExceptionOfType(IllegalArgumentException.class)
-                .isThrownBy(() -> ltiDeepLinkingService.performDeepLinking(oidcIdToken, "test_registration_id", result.courseId, result.exerciseSet))
+                .isThrownBy(() -> ltiDeepLinkingService.performDeepLinking(oidcIdToken, "test_registration_id", result.courseId, result.exerciseSet, DeepLinkingType.EXERCISE))
                 .withMessage("Missing claim: " + Claims.LTI_DEPLOYMENT_ID);
+    }
+
+    @Test
+    void testMissingCompetencyThrowsException() throws MalformedURLException, URISyntaxException {
+        createMockOidcIdToken();
+        when(courseRepository.findWithEagerCompetenciesAndPrerequisitesById(anyLong())).thenReturn(Optional.empty());
+
+        assertThatExceptionOfType(BadRequestAlertException.class)
+                .isThrownBy(() -> ltiDeepLinkingService.performDeepLinking(oidcIdToken, "test_registration_id", 1L, null, DeepLinkingType.COMPETENCY))
+                .withMessage("No competencies found.").matches(exception -> "LTI".equals(exception.getEntityName()) && "CompetenciesNotFound".equals(exception.getErrorKey()));
+    }
+
+    @Test
+    void testMissingLearningPathThrowsException() throws MalformedURLException, URISyntaxException {
+        createMockOidcIdToken();
+        Course course = createMockCourse();
+        course.setLearningPathsEnabled(false);
+        when(courseRepository.findWithEagerLearningPathsAndLearningPathCompetenciesByIdElseThrow(anyLong())).thenReturn(course);
+
+        assertThatExceptionOfType(BadRequestAlertException.class)
+                .isThrownBy(() -> ltiDeepLinkingService.performDeepLinking(oidcIdToken, "test_registration_id", 1L, null, DeepLinkingType.LEARNING_PATH))
+                .withMessage("No learning paths found.").matches(exception -> "LTI".equals(exception.getEntityName()) && "learningPathsNotFound".equals(exception.getErrorKey()));
+    }
+
+    @Test
+    void testMissingIrisDashboardThrowsException() throws MalformedURLException, URISyntaxException {
+        createMockOidcIdToken();
+        Course course = createMockCourse();
+        course.setStudentCourseAnalyticsDashboardEnabled(false);
+        when(courseRepository.findById(anyLong())).thenReturn(Optional.of(course));
+
+        assertThatExceptionOfType(BadRequestAlertException.class)
+                .isThrownBy(() -> ltiDeepLinkingService.performDeepLinking(oidcIdToken, "test_registration_id", 1L, null, DeepLinkingType.IRIS))
+                .withMessage("Course Analytics Dashboard not activated")
+                .matches(exception -> "LTI".equals(exception.getEntityName()) && "noCourseAnalyticsDashboard".equals(exception.getErrorKey()));
+    }
+
+    @Test
+    void testPerformDeepLinkingWithLectureType() throws MalformedURLException, URISyntaxException {
+        createMockOidcIdToken();
+        when(tokenRetriever.createDeepLinkingJWT(anyString(), anyMap())).thenReturn("test_jwt");
+
+        long courseId = 1L;
+        long lectureId = 2L;
+        Lecture lecture = new Lecture();
+        lecture.setId(lectureId);
+        lecture.setTitle("Test Lecture");
+        when(lectureRepository.findById(lectureId)).thenReturn(Optional.of(lecture));
+
+        Set<Long> lectureIds = new HashSet<>();
+        lectureIds.add(lectureId);
+
+        String deepLinkResponse = ltiDeepLinkingService.performDeepLinking(oidcIdToken, "test_registration_id", courseId, lectureIds, DeepLinkingType.LECTURE);
+
+        assertThat(deepLinkResponse).isNotNull();
+        assertThat(deepLinkResponse).contains("test_jwt");
+    }
+
+    @Test
+    void testPerformDeepLinkingWithCompetencyType() throws MalformedURLException, URISyntaxException {
+        createMockOidcIdToken();
+        when(tokenRetriever.createDeepLinkingJWT(anyString(), anyMap())).thenReturn("test_jwt");
+
+        Course course = createMockCourse();
+        Competency competency = new Competency();
+        course.setCompetencies(Set.of(competency));
+        when(courseRepository.findWithEagerCompetenciesAndPrerequisitesById(course.getId())).thenReturn(Optional.of(course));
+
+        String deepLinkResponse = ltiDeepLinkingService.performDeepLinking(oidcIdToken, "test_registration_id", course.getId(), null, DeepLinkingType.COMPETENCY);
+
+        assertThat(deepLinkResponse).isNotNull();
+        assertThat(deepLinkResponse).contains("test_jwt");
+    }
+
+    @Test
+    void testPerformDeepLinkingWithLearningPathType() throws MalformedURLException, URISyntaxException {
+        createMockOidcIdToken();
+        when(tokenRetriever.createDeepLinkingJWT(anyString(), anyMap())).thenReturn("test_jwt");
+
+        Course course = createMockCourse();
+        course.setLearningPathsEnabled(true);
+        when(courseRepository.findWithEagerLearningPathsAndLearningPathCompetenciesByIdElseThrow(course.getId())).thenReturn(course);
+
+        String deepLinkResponse = ltiDeepLinkingService.performDeepLinking(oidcIdToken, "test_registration_id", course.getId(), null, DeepLinkingType.LEARNING_PATH);
+
+        assertThat(deepLinkResponse).isNotNull();
+        assertThat(deepLinkResponse).contains("test_jwt");
+    }
+
+    @Test
+    void testPerformDeepLinkingWithIrisType() throws MalformedURLException, URISyntaxException {
+        createMockOidcIdToken();
+        when(tokenRetriever.createDeepLinkingJWT(anyString(), anyMap())).thenReturn("test_jwt");
+
+        Course course = createMockCourse();
+
+        course.setStudentCourseAnalyticsDashboardEnabled(true);
+        when(courseRepository.findById(course.getId())).thenReturn(Optional.of(course));
+
+        String deepLinkResponse = ltiDeepLinkingService.performDeepLinking(oidcIdToken, "test_registration_id", course.getId(), null, DeepLinkingType.IRIS);
+
+        assertThat(deepLinkResponse).isNotNull();
+        assertThat(deepLinkResponse).contains("test_jwt");
+    }
+
+    @Test
+    void testPerformDeepLinkingWithInvalidCourseId() throws MalformedURLException, URISyntaxException {
+        createMockOidcIdToken();
+        when(courseRepository.findById(anyLong())).thenReturn(Optional.empty());
+
+        assertThatExceptionOfType(BadRequestAlertException.class)
+                .isThrownBy(() -> ltiDeepLinkingService.performDeepLinking(oidcIdToken, "test_registration_id", 1L, null, DeepLinkingType.IRIS))
+                .withMessage("Course Analytics Dashboard not activated")
+                .matches(exception -> "LTI".equals(exception.getEntityName()) && "noCourseAnalyticsDashboard".equals(exception.getErrorKey()));
+    }
+
+    @Test
+    void buildContentUrl_withResourceId() {
+        String url = ltiDeepLinkingService.buildContentUrl("1", "exercises", "2");
+        assertThat(url).isEqualTo("http://artemis.com/courses/1/exercises/2");
+    }
+
+    @Test
+    void buildContentUrl_withoutResourceId() {
+        String url = ltiDeepLinkingService.buildContentUrl("1", "competencies");
+        assertThat(url).isEqualTo("http://artemis.com/courses/1/competencies");
+    }
+
+    @Test
+    void validateDeepLinkingResponseSettings_emptyReturnUrl() {
+        assertThatExceptionOfType(BadRequestAlertException.class).isThrownBy(() -> ltiDeepLinkingService.validateDeepLinkingResponseSettings("", "jwt", "deploymentId"))
+                .withMessage("Cannot find platform return URL")
+                .matches(exception -> "LTI".equals(exception.getEntityName()) && "deepLinkReturnURLEmpty".equals(exception.getErrorKey()));
+    }
+
+    @Test
+    void testPopulateCompetencyContentItemsWithNoCompetencies() {
+        Course course = createMockCourse();
+        course.setCompetencies(Set.of());
+        when(courseRepository.findWithEagerCompetenciesAndPrerequisitesById(course.getId())).thenReturn(Optional.of(course));
+
+        assertThatExceptionOfType(BadRequestAlertException.class).isThrownBy(() -> ltiDeepLinkingService.populateCompetencyContentItems(String.valueOf(course.getId())))
+                .withMessage("No competencies found.").matches(exception -> "LTI".equals(exception.getEntityName()) && "CompetenciesNotFound".equals(exception.getErrorKey()));
+    }
+
+    @Test
+    void testPopulateIrisContentItemsWithNoCourseFound() {
+        when(courseRepository.findById(anyLong())).thenReturn(Optional.empty());
+
+        assertThatExceptionOfType(BadRequestAlertException.class).isThrownBy(() -> ltiDeepLinkingService.populateIrisContentItems("1"))
+                .withMessage("Course Analytics Dashboard not activated")
+                .matches(exception -> "LTI".equals(exception.getEntityName()) && "noCourseAnalyticsDashboard".equals(exception.getErrorKey()));
+    }
+
+    @Test
+    void testPopulateLearningPathsContentItemsWithNoLearningPaths() {
+        Course course = createMockCourse();
+        course.setLearningPathsEnabled(false);
+        when(courseRepository.findWithEagerLearningPathsAndLearningPathCompetenciesByIdElseThrow(course.getId())).thenReturn(course);
+
+        assertThatExceptionOfType(BadRequestAlertException.class).isThrownBy(() -> ltiDeepLinkingService.populateLearningPathsContentItems(String.valueOf(course.getId())))
+                .withMessage("No learning paths found.").matches(exception -> "LTI".equals(exception.getEntityName()) && "learningPathsNotFound".equals(exception.getErrorKey()));
+    }
+
+    @Test
+    void testValidateDeepLinkingResponseSettingsWithEmptyJwt() {
+        assertThatExceptionOfType(BadRequestAlertException.class).isThrownBy(() -> ltiDeepLinkingService.validateDeepLinkingResponseSettings("returnUrl", "", "deploymentId"))
+                .withMessage("Deep linking response cannot be created")
+                .matches(exception -> "LTI".equals(exception.getEntityName()) && "deepLinkingResponseFailed".equals(exception.getErrorKey()));
+    }
+
+    @Test
+    void testCreateExerciseContentItemWithIncludedInOverallScore() {
+        Exercise exercise = createMockExercise(1L, 1L);
+        exercise.setIncludedInOverallScore(IncludedInOverallScore.INCLUDED_COMPLETELY);
+        String url = "http://artemis.com/courses/1/exercises/1";
+
+        LtiContentItem contentItem = ltiDeepLinkingService.createExerciseContentItem(exercise, url);
+
+        assertThat(contentItem.lineItem()).isNotNull();
+        assertThat(contentItem.lineItem().scoreMaximum()).isEqualTo(100D);
     }
 
     private void createMockOidcIdToken() throws MalformedURLException, URISyntaxException {
@@ -156,7 +350,7 @@ class LtiDeepLinkingServiceTest {
         when(oidcIdToken.getClaim("iat")).thenReturn("test");
         when(oidcIdToken.getClaim("nonce")).thenReturn("1234-34535-abcbcbd");
         when(oidcIdToken.getIssuer()).thenReturn(new URI("http://artemis.com").toURL());
-        when(oidcIdToken.getAudience()).thenReturn(Arrays.asList("http://moodle.com"));
+        when(oidcIdToken.getAudience()).thenReturn(List.of("http://moodle.com"));
         when(oidcIdToken.getExpiresAt()).thenReturn(Instant.now().plus(2, ChronoUnit.HOURS));
         when(oidcIdToken.getIssuedAt()).thenReturn(Instant.now());
         when(oidcIdToken.getNonce()).thenReturn("1234-34535-abcbcbd");
@@ -174,6 +368,12 @@ class LtiDeepLinkingServiceTest {
         course.setOnlineCourseConfiguration(new OnlineCourseConfiguration());
         exercise.setCourse(course);
         return exercise;
+    }
+
+    private Course createMockCourse() {
+        Course course = new Course();
+        course.setId(1L);
+        return course;
     }
 
     private DeepLinkCourseExercises createTestExercisesForDeepLinking() {
