@@ -22,8 +22,6 @@ import org.springframework.util.LinkedMultiValueMap;
 
 import de.tum.cit.aet.artemis.assessment.domain.AssessmentType;
 import de.tum.cit.aet.artemis.assessment.domain.Result;
-import de.tum.cit.aet.artemis.communication.domain.Post;
-import de.tum.cit.aet.artemis.communication.test_repository.PostTestRepository;
 import de.tum.cit.aet.artemis.core.config.Constants;
 import de.tum.cit.aet.artemis.core.domain.Course;
 import de.tum.cit.aet.artemis.core.domain.User;
@@ -31,8 +29,8 @@ import de.tum.cit.aet.artemis.core.exception.EntityNotFoundException;
 import de.tum.cit.aet.artemis.core.util.TestResourceUtils;
 import de.tum.cit.aet.artemis.exam.domain.Exam;
 import de.tum.cit.aet.artemis.exam.domain.ExerciseGroup;
-import de.tum.cit.aet.artemis.exam.repository.ExamRepository;
 import de.tum.cit.aet.artemis.exam.repository.ExerciseGroupRepository;
+import de.tum.cit.aet.artemis.exam.test_repository.ExamTestRepository;
 import de.tum.cit.aet.artemis.exam.test_repository.StudentExamTestRepository;
 import de.tum.cit.aet.artemis.exam.util.ExamUtilService;
 import de.tum.cit.aet.artemis.exercise.domain.ExerciseMode;
@@ -49,16 +47,9 @@ import de.tum.cit.aet.artemis.exercise.test_repository.StudentParticipationTestR
 import de.tum.cit.aet.artemis.modeling.domain.DiagramType;
 import de.tum.cit.aet.artemis.modeling.domain.ModelingExercise;
 import de.tum.cit.aet.artemis.modeling.domain.ModelingSubmission;
-import de.tum.cit.aet.artemis.modeling.service.compass.CompassService;
 import de.tum.cit.aet.artemis.modeling.test_repository.ModelingSubmissionTestRepository;
 import de.tum.cit.aet.artemis.modeling.util.ModelingExerciseFactory;
 import de.tum.cit.aet.artemis.modeling.util.ModelingExerciseUtilService;
-import de.tum.cit.aet.artemis.plagiarism.domain.PlagiarismCase;
-import de.tum.cit.aet.artemis.plagiarism.domain.PlagiarismComparison;
-import de.tum.cit.aet.artemis.plagiarism.domain.PlagiarismSubmission;
-import de.tum.cit.aet.artemis.plagiarism.domain.modeling.ModelingSubmissionElement;
-import de.tum.cit.aet.artemis.plagiarism.repository.PlagiarismCaseRepository;
-import de.tum.cit.aet.artemis.plagiarism.repository.PlagiarismComparisonRepository;
 import de.tum.cit.aet.artemis.shared.base.AbstractSpringIntegrationLocalCILocalVCTest;
 import de.tum.cit.aet.artemis.text.domain.TextExercise;
 import de.tum.cit.aet.artemis.text.util.TextExerciseUtilService;
@@ -83,22 +74,10 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
     private ExerciseGroupRepository exerciseGroupRepository;
 
     @Autowired
-    private ExamRepository examRepository;
+    private ExamTestRepository examRepository;
 
     @Autowired
     private StudentExamTestRepository studentExamRepository;
-
-    @Autowired
-    private CompassService compassService;
-
-    @Autowired
-    private PlagiarismComparisonRepository plagiarismComparisonRepository;
-
-    @Autowired
-    private PlagiarismCaseRepository plagiarismCaseRepository;
-
-    @Autowired
-    private PostTestRepository postRepository;
 
     @Autowired
     private ModelingExerciseUtilService modelingExerciseUtilService;
@@ -132,8 +111,6 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
 
     private String validModel;
 
-    private String validSameModel;
-
     private TextExercise textExercise;
 
     private Course course;
@@ -152,7 +129,6 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
 
         emptyModel = TestResourceUtils.loadFileFromResources("test-data/model-submission/empty-class-diagram.json");
         validModel = TestResourceUtils.loadFileFromResources("test-data/model-submission/model.54727.json");
-        validSameModel = TestResourceUtils.loadFileFromResources("test-data/model-submission/model.54727-copy.json");
         submittedSubmission = generateSubmittedSubmission();
         unsubmittedSubmission = generateUnsubmittedSubmission();
 
@@ -170,14 +146,14 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
     void createModelingSubmission_badRequest() throws Exception {
         ModelingSubmission submission = ParticipationFactory.generateModelingSubmission(validModel, true);
         modelingSubmissionRepo.save(submission);
-        request.postWithResponseBody("/api/exercises/" + classExercise.getId() + "/modeling-submissions", submission, ModelingSubmission.class, HttpStatus.BAD_REQUEST);
+        request.postWithResponseBody("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submissions", submission, ModelingSubmission.class, HttpStatus.BAD_REQUEST);
     }
 
     @Test
     @WithMockUser(username = TEST_PREFIX + "student4", roles = "USER")
     void createModelingSubmission_studentNotInCourse() throws Exception {
         ModelingSubmission submission = ParticipationFactory.generateModelingSubmission(validModel, true);
-        request.postWithResponseBody("/api/exercises/" + classExercise.getId() + "/modeling-submissions", submission, ModelingSubmission.class, HttpStatus.FORBIDDEN);
+        request.postWithResponseBody("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submissions", submission, ModelingSubmission.class, HttpStatus.FORBIDDEN);
     }
 
     @Test
@@ -189,13 +165,13 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         char[] charsModel = new char[(int) (Constants.MAX_SUBMISSION_MODEL_LENGTH)];
         Arrays.fill(charsModel, 'a');
         submission.setModel(new String(charsModel));
-        request.postWithResponseBody("/api/exercises/" + classExercise.getId() + "/modeling-submissions", submission, ModelingSubmission.class, HttpStatus.OK);
+        request.postWithResponseBody("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submissions", submission, ModelingSubmission.class, HttpStatus.OK);
 
         // should be too large
         char[] charsModelTooLarge = new char[(int) (Constants.MAX_SUBMISSION_MODEL_LENGTH + 1)];
         Arrays.fill(charsModelTooLarge, 'a');
         submission.setModel(new String(charsModelTooLarge));
-        request.postWithResponseBody("/api/exercises/" + classExercise.getId() + "/modeling-submissions", submission, ModelingSubmission.class, HttpStatus.BAD_REQUEST);
+        request.postWithResponseBody("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submissions", submission, ModelingSubmission.class, HttpStatus.BAD_REQUEST);
     }
 
     @Test
@@ -328,12 +304,12 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
 
         returnedSubmission.setModel(validModel);
         returnedSubmission.setSubmitted(false);
-        request.putWithResponseBody("/api/exercises/" + classExercise.getId() + "/modeling-submissions", returnedSubmission, ModelingSubmission.class, HttpStatus.OK);
+        request.putWithResponseBody("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submissions", returnedSubmission, ModelingSubmission.class, HttpStatus.OK);
 
         modelingExerciseUtilService.checkModelingSubmissionCorrectlyStored(returnedSubmission.getId(), validModel);
 
         returnedSubmission.setSubmitted(true);
-        returnedSubmission = request.putWithResponseBody("/api/exercises/" + classExercise.getId() + "/modeling-submissions", returnedSubmission, ModelingSubmission.class,
+        returnedSubmission = request.putWithResponseBody("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submissions", returnedSubmission, ModelingSubmission.class,
                 HttpStatus.OK);
         StudentParticipation studentParticipation = (StudentParticipation) returnedSubmission.getParticipation();
         assertThat(studentParticipation.getResults()).as("do not send old results to the client").isEmpty();
@@ -353,7 +329,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         result.setRated(true);
         result.setAssessor(user);
         submission.addResult(result);
-        ModelingSubmission storedSubmission = request.postWithResponseBody("/api/exercises/" + classExercise.getId() + "/modeling-submissions", submission,
+        ModelingSubmission storedSubmission = request.postWithResponseBody("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submissions", submission,
                 ModelingSubmission.class);
 
         userUtilService.changeUser(TEST_PREFIX + "student1");
@@ -367,7 +343,8 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         ModelingSubmission submission1 = modelingExerciseUtilService.addModelingSubmission(classExercise, submittedSubmission, TEST_PREFIX + "student1");
         ModelingSubmission submission2 = modelingExerciseUtilService.addModelingSubmission(classExercise, unsubmittedSubmission, TEST_PREFIX + "student2");
 
-        List<ModelingSubmission> submissions = request.getList("/api/exercises/" + classExercise.getId() + "/modeling-submissions", HttpStatus.OK, ModelingSubmission.class);
+        List<ModelingSubmission> submissions = request.getList("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submissions", HttpStatus.OK,
+                ModelingSubmission.class);
 
         assertThat(submissions).as("contains both submissions").containsExactlyInAnyOrder(submission1, submission2);
     }
@@ -375,25 +352,25 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
     @Test
     @WithMockUser(username = TEST_PREFIX + "instructor2", roles = "INSTRUCTOR")
     void getAllSubmissionsOfExercise_instructorNotInCourse() throws Exception {
-        request.getList("/api/exercises/" + classExercise.getId() + "/modeling-submissions", HttpStatus.FORBIDDEN, ModelingSubmission.class);
+        request.getList("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submissions", HttpStatus.FORBIDDEN, ModelingSubmission.class);
     }
 
     @Test
     @WithMockUser(username = TEST_PREFIX + "tutor1", roles = "TA")
     void getAllSubmissionsOfExercise_assessedByTutor() throws Exception {
-        List<ModelingSubmission> submissions = request.getList("/api/exercises/" + classExercise.getId() + "/modeling-submissions?assessedByTutor=true", HttpStatus.OK,
+        List<ModelingSubmission> submissions = request.getList("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submissions?assessedByTutor=true", HttpStatus.OK,
                 ModelingSubmission.class);
         assertThat(submissions).as("does not have a modeling submission assessed by the tutor").isEmpty();
 
         modelingExerciseUtilService.addModelingSubmissionWithFinishedResultAndAssessor(classExercise, submittedSubmission, TEST_PREFIX + "student1", TEST_PREFIX + "tutor1");
-        submissions = request.getList("/api/exercises/" + classExercise.getId() + "/modeling-submissions?assessedByTutor=true", HttpStatus.OK, ModelingSubmission.class);
+        submissions = request.getList("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submissions?assessedByTutor=true", HttpStatus.OK, ModelingSubmission.class);
         assertThat(submissions).as("has a modeling submission assessed by the tutor").hasSizeGreaterThanOrEqualTo(1);
     }
 
     @Test
     @WithMockUser(username = TEST_PREFIX + "tutor2", roles = "TA")
     void getAllSubmissionsOfExercise_assessedByTutor_instructorNotInCourse() throws Exception {
-        request.getList("/api/exercises/" + classExercise.getId() + "/modeling-submissions?assessedByTutor=true", HttpStatus.FORBIDDEN, ModelingSubmission.class);
+        request.getList("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submissions?assessedByTutor=true", HttpStatus.FORBIDDEN, ModelingSubmission.class);
     }
 
     @Test
@@ -402,8 +379,8 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         modelingExerciseUtilService.addModelingSubmission(classExercise, submittedSubmission, TEST_PREFIX + "student1");
         modelingExerciseUtilService.addModelingSubmission(classExercise, unsubmittedSubmission, TEST_PREFIX + "student2");
 
-        request.getList("/api/exercises/" + classExercise.getId() + "/modeling-submissions", HttpStatus.FORBIDDEN, ModelingSubmission.class);
-        request.getList("/api/exercises/" + classExercise.getId() + "/modeling-submissions?submittedOnly=true", HttpStatus.FORBIDDEN, ModelingSubmission.class);
+        request.getList("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submissions", HttpStatus.FORBIDDEN, ModelingSubmission.class);
+        request.getList("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submissions?submittedOnly=true", HttpStatus.FORBIDDEN, ModelingSubmission.class);
     }
 
     @Test
@@ -413,7 +390,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         modelingExerciseUtilService.addModelingSubmission(classExercise, unsubmittedSubmission, TEST_PREFIX + "student2");
         ModelingSubmission submission3 = modelingExerciseUtilService.addModelingSubmission(classExercise, generateSubmittedSubmission(), TEST_PREFIX + "student3");
 
-        List<ModelingSubmission> submissions = request.getList("/api/exercises/" + classExercise.getId() + "/modeling-submissions?submittedOnly=true", HttpStatus.OK,
+        List<ModelingSubmission> submissions = request.getList("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submissions?submittedOnly=true", HttpStatus.OK,
                 ModelingSubmission.class);
 
         assertThat(submissions).as("contains only submitted submission").containsExactlyInAnyOrder(submission1, submission3);
@@ -426,7 +403,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         ModelingSubmission submission = ParticipationFactory.generateModelingSubmission(validModel, true);
         submission = modelingExerciseUtilService.addModelingSubmission(classExercise, submission, TEST_PREFIX + "student1");
 
-        ModelingSubmission storedSubmission = request.get("/api/modeling-submissions/" + submission.getId(), HttpStatus.OK, ModelingSubmission.class);
+        ModelingSubmission storedSubmission = request.get("/api/modeling/modeling-submissions/" + submission.getId(), HttpStatus.OK, ModelingSubmission.class);
 
         assertThat(storedSubmission.getLatestResult()).as("result has been set").isNotNull();
         assertThat(storedSubmission.getLatestResult().getAssessor()).as("assessor is tutor1").isEqualTo(user);
@@ -439,7 +416,8 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         ModelingSubmission submission = ParticipationFactory.generateModelingSubmission(validModel, true);
         submission = modelingExerciseUtilService.addModelingSubmission(classExercise, submission, TEST_PREFIX + "student1");
 
-        ModelingSubmission storedSubmission = request.get("/api/modeling-submissions/" + submission.getId() + "?withoutResults=true", HttpStatus.OK, ModelingSubmission.class);
+        ModelingSubmission storedSubmission = request.get("/api/modeling/modeling-submissions/" + submission.getId() + "?withoutResults=true", HttpStatus.OK,
+                ModelingSubmission.class);
 
         assertThat(storedSubmission.getLatestResult()).as("result has not been set").isNull();
     }
@@ -450,62 +428,15 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         ModelingSubmission submission = ParticipationFactory.generateModelingSubmission(validModel, true);
         submission = modelingExerciseUtilService.addModelingSubmission(classExercise, submission, TEST_PREFIX + "student1");
 
-        request.get("/api/modeling-submissions/" + submission.getId(), HttpStatus.FORBIDDEN, ModelingSubmission.class);
+        request.get("/api/modeling/modeling-submissions/" + submission.getId(), HttpStatus.FORBIDDEN, ModelingSubmission.class);
     }
 
     @Test
-    @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
-    void getModelSubmissionWithResult_involved_allowed() throws Exception {
-        ModelingSubmission submission = ParticipationFactory.generateModelingSubmission(validModel, true);
-        submission = modelingExerciseUtilService.addModelingSubmission(classExercise, submission, TEST_PREFIX + "student1");
-        PlagiarismComparison<ModelingSubmissionElement> plagiarismComparison = new PlagiarismComparison<>();
-        PlagiarismSubmission<ModelingSubmissionElement> submissionA = new PlagiarismSubmission<>();
-        submissionA.setStudentLogin(TEST_PREFIX + "student1");
-        submissionA.setSubmissionId(submission.getId());
-        plagiarismComparison.setSubmissionA(submissionA);
-        PlagiarismCase plagiarismCase = new PlagiarismCase();
-        plagiarismCase.setExercise(classExercise);
-        plagiarismCase = plagiarismCaseRepository.save(plagiarismCase);
-        Post post = new Post();
-        post.setAuthor(userTestRepository.getUserByLoginElseThrow(TEST_PREFIX + "instructor1"));
-        post.setTitle("Title Plagiarism Case Post");
-        post.setContent("Content Plagiarism Case Post");
-        post.setVisibleForStudents(true);
-        post.setPlagiarismCase(plagiarismCase);
-        postRepository.save(post);
-        submissionA.setPlagiarismCase(plagiarismCase);
-        plagiarismComparisonRepository.save(plagiarismComparison);
-
-        var submissionResult = request.get("/api/modeling-submissions/" + submission.getId(), HttpStatus.OK, ModelingSubmission.class);
-
-        assertThat(submissionResult.getParticipation()).as("Should anonymize participation").isNull();
-        assertThat(submissionResult.getResults()).as("Should anonymize results").isEmpty();
-        assertThat(submissionResult.getSubmissionDate()).as("Should anonymize submission date").isNull();
-    }
-
-    @Test
-    @WithMockUser(value = TEST_PREFIX + "student1", roles = "USER")
+    @WithMockUser(value = TEST_PREFIX + "student2", roles = "USER")
     void getModelSubmissionWithResult_notInvolved_notAllowed() throws Exception {
         ModelingSubmission submission = ParticipationFactory.generateModelingSubmission(validModel, true);
         submission = modelingExerciseUtilService.addModelingSubmission(classExercise, submission, TEST_PREFIX + "student1");
-        request.get("/api/modeling-submissions/" + submission.getId(), HttpStatus.FORBIDDEN, ModelingSubmission.class);
-    }
-
-    @Test
-    @WithMockUser(value = TEST_PREFIX + "student1", roles = "USER")
-    void getModelSubmissionWithResult_notOwner_beforeDueDate_notAllowed() throws Exception {
-        var submission = ParticipationFactory.generateModelingSubmission(validModel, true);
-        submission = modelingExerciseUtilService.addModelingSubmission(classExercise, submission, TEST_PREFIX + "student2");
-
-        var plagiarismComparison = new PlagiarismComparison<ModelingSubmissionElement>();
-        var submissionA = new PlagiarismSubmission<ModelingSubmissionElement>();
-        submissionA.setStudentLogin(TEST_PREFIX + "student2");
-        submissionA.setSubmissionId(submission.getId());
-        plagiarismComparison.setSubmissionA(submissionA);
-
-        plagiarismComparisonRepository.save(plagiarismComparison);
-
-        request.get("/api/modeling-submissions/" + submission.getId(), HttpStatus.FORBIDDEN, ModelingSubmission.class);
+        request.get("/api/modeling/modeling-submissions/" + submission.getId(), HttpStatus.FORBIDDEN, ModelingSubmission.class);
     }
 
     @Test
@@ -516,7 +447,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         ModelingSubmission submission = ParticipationFactory.generateModelingSubmission(validModel, true);
         submission = modelingExerciseUtilService.addModelingSubmissionWithResultAndAssessor(useCaseExercise, submission, TEST_PREFIX + "student1", TEST_PREFIX + "tutor1");
 
-        ModelingSubmission storedSubmission = request.get("/api/modeling-submissions/" + submission.getId(), HttpStatus.OK, ModelingSubmission.class);
+        ModelingSubmission storedSubmission = request.get("/api/modeling/modeling-submissions/" + submission.getId(), HttpStatus.OK, ModelingSubmission.class);
 
         assertThat(storedSubmission.getLatestResult()).as("result has been set").isNotNull();
         assertThat(storedSubmission.getLatestResult().getAssessor()).as("assessor is tutor1").isEqualTo(user);
@@ -530,7 +461,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         ModelingSubmission submission = ParticipationFactory.generateModelingSubmission(validModel, true);
         modelingExerciseUtilService.addModelingSubmission(useCaseExercise, submission, TEST_PREFIX + "student2");
 
-        request.get("/api/modeling-submissions/" + submission.getId(), HttpStatus.BAD_REQUEST, ModelingSubmission.class);
+        request.get("/api/modeling/modeling-submissions/" + submission.getId(), HttpStatus.BAD_REQUEST, ModelingSubmission.class);
     }
 
     @Test
@@ -542,7 +473,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         Result storedResult = submission.getResultForCorrectionRound(1);
         var params = new LinkedMultiValueMap<String, String>();
         params.add("resultId", String.valueOf(storedResult.getId()));
-        ModelingSubmission storedSubmission = request.get("/api/modeling-submissions/" + submission.getId(), HttpStatus.OK, ModelingSubmission.class, params);
+        ModelingSubmission storedSubmission = request.get("/api/modeling/modeling-submissions/" + submission.getId(), HttpStatus.OK, ModelingSubmission.class, params);
 
         assertThat(storedSubmission.getResults()).isNotNull();
         assertThat(storedSubmission.getResults()).contains(storedResult);
@@ -558,7 +489,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         Result storedResult = submission.getResultForCorrectionRound(0);
         var params = new LinkedMultiValueMap<String, String>();
         params.add("resultId", String.valueOf(storedResult.getId()));
-        request.get("/api/modeling-submissions/" + submission.getId(), HttpStatus.FORBIDDEN, ModelingSubmission.class, params);
+        request.get("/api/modeling/modeling-submissions/" + submission.getId(), HttpStatus.FORBIDDEN, ModelingSubmission.class, params);
     }
 
     @Test
@@ -569,7 +500,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
 
         exerciseUtilService.updateExerciseDueDate(classExercise.getId(), ZonedDateTime.now().minusHours(1));
 
-        ModelingSubmission storedSubmission = request.get("/api/exercises/" + classExercise.getId() + "/modeling-submission-without-assessment", HttpStatus.OK,
+        ModelingSubmission storedSubmission = request.get("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submission-without-assessment", HttpStatus.OK,
                 ModelingSubmission.class);
 
         assertThat(storedSubmission).as("submission was found").usingRecursiveComparison().ignoringFields("results", "submissionDate", "participation").isEqualTo(submission);
@@ -580,28 +511,8 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
 
     @Test
     @WithMockUser(username = TEST_PREFIX + "tutor1", roles = "TA")
-    void getModelSubmissionWithSimilarElements() throws Exception {
-        ModelingSubmission submission = ParticipationFactory.generateModelingSubmission(validModel, true);
-        modelingExerciseUtilService.addModelingSubmission(classExercise, submission, TEST_PREFIX + "student1");
-        ModelingSubmission submission2 = ParticipationFactory.generateModelingSubmission(validSameModel, true);
-        modelingExerciseUtilService.addModelingSubmission(classExercise, submission2, TEST_PREFIX + "student2");
-
-        exerciseUtilService.updateExerciseDueDate(classExercise.getId(), ZonedDateTime.now().minusHours(1));
-
-        compassService.build(classExercise);
-
-        ModelingSubmission storedSubmission = request.get("/api/exercises/" + classExercise.getId() + "/modeling-submission-without-assessment?lock=true", HttpStatus.OK,
-                ModelingSubmission.class);
-
-        assertThat(storedSubmission).as("submission was found").isNotNull();
-        assertThat(storedSubmission.getSimilarElements()).as("similarity count is set").isNotNull();
-        assertThat(storedSubmission.getSimilarElements()).as("similarity count is set").hasSize(10);
-    }
-
-    @Test
-    @WithMockUser(username = TEST_PREFIX + "tutor1", roles = "TA")
     void getModelSubmissionWithoutAssessment_wrongExerciseType() throws Exception {
-        request.get("/api/exercises/" + textExercise.getId() + "/modeling-submission-without-assessment", HttpStatus.BAD_REQUEST, ModelingSubmission.class);
+        request.get("/api/modeling/exercises/" + textExercise.getId() + "/modeling-submission-without-assessment", HttpStatus.BAD_REQUEST, ModelingSubmission.class);
     }
 
     @Test
@@ -612,7 +523,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         submission = modelingExerciseUtilService.addModelingSubmission(classExercise, submission, TEST_PREFIX + "student1");
         exerciseUtilService.updateExerciseDueDate(classExercise.getId(), ZonedDateTime.now().minusHours(1));
 
-        ModelingSubmission storedSubmission = request.get("/api/exercises/" + classExercise.getId() + "/modeling-submission-without-assessment?lock=true", HttpStatus.OK,
+        ModelingSubmission storedSubmission = request.get("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submission-without-assessment?lock=true", HttpStatus.OK,
                 ModelingSubmission.class);
 
         // set dates to UTC and round to milliseconds for comparison
@@ -632,7 +543,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         modelingExerciseUtilService.addModelingSubmission(classExercise, submission, TEST_PREFIX + "student1");
         exerciseUtilService.updateExerciseDueDate(classExercise.getId(), ZonedDateTime.now().minusHours(1));
 
-        var response = request.get("/api/exercises/" + classExercise.getId() + "/modeling-submission-without-assessment", HttpStatus.OK, ModelingSubmission.class);
+        var response = request.get("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submission-without-assessment", HttpStatus.OK, ModelingSubmission.class);
         assertThat(response).isNull();
     }
 
@@ -643,7 +554,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         modelingExerciseUtilService.addModelingSubmissionWithResultAndAssessor(classExercise, submission, TEST_PREFIX + "student1", TEST_PREFIX + "tutor1");
         exerciseUtilService.updateExerciseDueDate(classExercise.getId(), ZonedDateTime.now().minusHours(1));
 
-        var response = request.get("/api/exercises/" + classExercise.getId() + "/modeling-submission-without-assessment", HttpStatus.OK, ModelingSubmission.class);
+        var response = request.get("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submission-without-assessment", HttpStatus.OK, ModelingSubmission.class);
         assertThat(response).isNull();
     }
 
@@ -653,7 +564,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         ModelingSubmission submission = ParticipationFactory.generateModelingSubmission(validModel, true);
         modelingExerciseUtilService.addModelingSubmission(classExercise, submission, TEST_PREFIX + "student1");
 
-        request.get("/api/exercises/" + classExercise.getId() + "/modeling-submission-without-assessment", HttpStatus.FORBIDDEN, ModelingSubmission.class);
+        request.get("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submission-without-assessment", HttpStatus.FORBIDDEN, ModelingSubmission.class);
     }
 
     @Test
@@ -663,7 +574,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         modelingExerciseUtilService.addModelingSubmission(classExercise, submission, TEST_PREFIX + "student1");
         exerciseUtilService.updateExerciseDueDate(classExercise.getId(), ZonedDateTime.now().minusHours(1));
 
-        request.get("/api/exercises/" + classExercise.getId() + "/modeling-submission-without-assessment", HttpStatus.FORBIDDEN, ModelingSubmission.class);
+        request.get("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submission-without-assessment", HttpStatus.FORBIDDEN, ModelingSubmission.class);
     }
 
     @Test
@@ -673,7 +584,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         modelingExerciseUtilService.addModelingSubmission(classExercise, submission, TEST_PREFIX + "student1");
         exerciseUtilService.updateExerciseDueDate(classExercise.getId(), ZonedDateTime.now().minusHours(1));
 
-        request.get("/api/exercises/" + classExercise.getId() + "/modeling-submission-without-assessment", HttpStatus.FORBIDDEN, ModelingSubmission.class);
+        request.get("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submission-without-assessment", HttpStatus.FORBIDDEN, ModelingSubmission.class);
     }
 
     @Test
@@ -684,10 +595,10 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         modelingExerciseUtilService.addModelingSubmission(useCaseExercise, newSubmission, TEST_PREFIX + "student1");
         exerciseUtilService.updateExerciseDueDate(useCaseExercise.getId(), ZonedDateTime.now().minusHours(1));
 
-        ModelingSubmission storedSubmission = request.get("/api/exercises/" + useCaseExercise.getId() + "/modeling-submission-without-assessment?lock=true", HttpStatus.OK,
+        ModelingSubmission storedSubmission = request.get("/api/modeling/exercises/" + useCaseExercise.getId() + "/modeling-submission-without-assessment?lock=true", HttpStatus.OK,
                 ModelingSubmission.class);
         assertThat(storedSubmission).as("submission was found").isNotNull();
-        request.get("/api/exercises/" + useCaseExercise.getId() + "/modeling-submission-without-assessment", HttpStatus.BAD_REQUEST, ModelingSubmission.class);
+        request.get("/api/modeling/exercises/" + useCaseExercise.getId() + "/modeling-submission-without-assessment", HttpStatus.BAD_REQUEST, ModelingSubmission.class);
     }
 
     @Test
@@ -705,10 +616,10 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         modelingExerciseUtilService.addModelingSubmission(useCaseExercise, newSubmission, TEST_PREFIX + "student1");
         exerciseUtilService.updateExerciseDueDate(useCaseExercise.getId(), ZonedDateTime.now().minusHours(1));
 
-        ModelingSubmission storedSubmission = request.get("/api/exercises/" + useCaseExercise.getId() + "/modeling-submission-without-assessment?lock=true", HttpStatus.OK,
+        ModelingSubmission storedSubmission = request.get("/api/modeling/exercises/" + useCaseExercise.getId() + "/modeling-submission-without-assessment?lock=true", HttpStatus.OK,
                 ModelingSubmission.class);
         assertThat(storedSubmission).as("submission was found").isNotNull();
-        request.get("/api/exercises/" + useCaseExercise.getId() + "/modeling-submission-without-assessment", HttpStatus.BAD_REQUEST, ModelingSubmission.class);
+        request.get("/api/modeling/exercises/" + useCaseExercise.getId() + "/modeling-submission-without-assessment", HttpStatus.BAD_REQUEST, ModelingSubmission.class);
     }
 
     @Test
@@ -721,7 +632,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         submission = (ModelingSubmission) modelingExerciseUtilService.addModelingSubmissionWithFinishedResultAndAssessor(classExercise, submission, TEST_PREFIX + "student1",
                 TEST_PREFIX + "tutor1");
 
-        ModelingSubmission receivedSubmission = request.get("/api/participations/" + submission.getParticipation().getId() + "/latest-modeling-submission", HttpStatus.OK,
+        ModelingSubmission receivedSubmission = request.get("/api/modeling/participations/" + submission.getParticipation().getId() + "/latest-modeling-submission", HttpStatus.OK,
                 ModelingSubmission.class);
 
         // set dates to UTC and round to milliseconds for comparison
@@ -734,7 +645,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         // students can only see their own models
         submission = ParticipationFactory.generateModelingSubmission(validModel, true);
         submission = modelingExerciseUtilService.addModelingSubmission(classExercise, submission, TEST_PREFIX + "student2");
-        request.get("/api/participations/" + submission.getParticipation().getId() + "/latest-modeling-submission", HttpStatus.FORBIDDEN, ModelingSubmission.class);
+        request.get("/api/modeling/participations/" + submission.getParticipation().getId() + "/latest-modeling-submission", HttpStatus.FORBIDDEN, ModelingSubmission.class);
     }
 
     @Test
@@ -745,11 +656,11 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         participation.setParticipant(user);
         participation.setExercise(null);
         StudentParticipation studentParticipation = studentParticipationRepository.save(participation);
-        request.get("/api/participations/" + studentParticipation.getId() + "/latest-modeling-submission", HttpStatus.BAD_REQUEST, ModelingSubmission.class);
+        request.get("/api/modeling/participations/" + studentParticipation.getId() + "/latest-modeling-submission", HttpStatus.BAD_REQUEST, ModelingSubmission.class);
 
         participation.setExercise(textExercise);
         studentParticipation = studentParticipationRepository.save(participation);
-        request.get("/api/participations/" + studentParticipation.getId() + "/latest-modeling-submission", HttpStatus.BAD_REQUEST, ModelingSubmission.class);
+        request.get("/api/modeling/participations/" + studentParticipation.getId() + "/latest-modeling-submission", HttpStatus.BAD_REQUEST, ModelingSubmission.class);
     }
 
     @Test
@@ -775,7 +686,8 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         ModelingSubmission modelingSubmission = ParticipationFactory.generateModelingSubmission("Some text", true);
         modelingSubmission = modelingExerciseUtilService.addModelingSubmissionWithResultAndAssessor(modelingExercise, modelingSubmission, TEST_PREFIX + "student1",
                 TEST_PREFIX + "tutor1");
-        request.get("/api/participations/" + modelingSubmission.getParticipation().getId() + "/latest-modeling-submission", HttpStatus.FORBIDDEN, ModelingSubmission.class);
+        request.get("/api/modeling/participations/" + modelingSubmission.getParticipation().getId() + "/latest-modeling-submission", HttpStatus.FORBIDDEN,
+                ModelingSubmission.class);
     }
 
     @Test
@@ -805,7 +717,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         modelingSubmission = modelingExerciseUtilService.addModelingSubmissionWithResultAndAssessor(modelingExercise, modelingSubmission, TEST_PREFIX + "student1",
                 TEST_PREFIX + "tutor1");
         // students can always view their submissions for test exams
-        var submission = request.get("/api/participations/" + modelingSubmission.getParticipation().getId() + "/latest-modeling-submission", HttpStatus.OK,
+        var submission = request.get("/api/modeling/participations/" + modelingSubmission.getParticipation().getId() + "/latest-modeling-submission", HttpStatus.OK,
                 ModelingSubmission.class);
         assertThat(submission).isNotNull();
         assertThat(submission.getId()).isEqualTo(modelingSubmission.getId());
@@ -818,7 +730,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
     void getSubmissionForModelingEditor_emptySubmission() throws Exception {
         StudentParticipation studentParticipation = participationUtilService.createAndSaveParticipationForExercise(classExercise, TEST_PREFIX + "student1");
         assertThat(studentParticipation.getSubmissions()).isEmpty();
-        ModelingSubmission returnedSubmission = request.get("/api/participations/" + studentParticipation.getId() + "/latest-modeling-submission", HttpStatus.OK,
+        ModelingSubmission returnedSubmission = request.get("/api/modeling/participations/" + studentParticipation.getId() + "/latest-modeling-submission", HttpStatus.OK,
                 ModelingSubmission.class);
         assertThat(returnedSubmission).as("new submission is created").isNotNull();
     }
@@ -829,7 +741,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         StudentParticipation studentParticipation = participationUtilService.createAndSaveParticipationForExercise(classExercise, TEST_PREFIX + "student1");
         modelingExerciseUtilService.addModelingSubmissionWithEmptyResult(classExercise, "", TEST_PREFIX + "student1");
 
-        ModelingSubmission returnedSubmission = request.get("/api/participations/" + studentParticipation.getId() + "/latest-modeling-submission", HttpStatus.OK,
+        ModelingSubmission returnedSubmission = request.get("/api/modeling/participations/" + studentParticipation.getId() + "/latest-modeling-submission", HttpStatus.OK,
                 ModelingSubmission.class);
         assertThat(returnedSubmission.getLatestResult()).as("the result is not sent to the client if the assessment is not finished").isNull();
     }
@@ -839,13 +751,13 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
     void submitExercise_afterDueDate_forbidden() throws Exception {
         afterDueDateParticipation.setInitializationDate(ZonedDateTime.now().minusDays(2));
         studentParticipationRepository.saveAndFlush(afterDueDateParticipation);
-        request.post("/api/exercises/" + finishedExercise.getId() + "/modeling-submissions", submittedSubmission, HttpStatus.FORBIDDEN);
+        request.post("/api/modeling/exercises/" + finishedExercise.getId() + "/modeling-submissions", submittedSubmission, HttpStatus.FORBIDDEN);
     }
 
     @Test
     @WithMockUser(username = TEST_PREFIX + "student3", roles = "USER")
     void submitExercise_beforeDueDate_allowed() throws Exception {
-        ModelingSubmission submission = request.postWithResponseBody("/api/exercises/" + classExercise.getId() + "/modeling-submissions", submittedSubmission,
+        ModelingSubmission submission = request.postWithResponseBody("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submissions", submittedSubmission,
                 ModelingSubmission.class, HttpStatus.OK);
 
         assertThat(submission.getSubmissionDate()).isCloseTo(ZonedDateTime.now(), within(500, ChronoUnit.MILLIS));
@@ -856,8 +768,8 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
     @WithMockUser(username = TEST_PREFIX + "student3", roles = "USER")
     void submitExercise_beforeDueDateSecondSubmission_allowed() throws Exception {
         submittedSubmission.setModel(validModel);
-        submittedSubmission = request.postWithResponseBody("/api/exercises/" + classExercise.getId() + "/modeling-submissions", submittedSubmission, ModelingSubmission.class,
-                HttpStatus.OK);
+        submittedSubmission = request.postWithResponseBody("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submissions", submittedSubmission,
+                ModelingSubmission.class, HttpStatus.OK);
 
         final var submissionInDb = modelingSubmissionRepo.findById(submittedSubmission.getId());
         assertThat(submissionInDb).isPresent();
@@ -870,13 +782,13 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         afterDueDateParticipation.setInitializationDate(ZonedDateTime.now());
         studentParticipationRepository.saveAndFlush(afterDueDateParticipation);
 
-        request.postWithoutLocation("/api/exercises/" + classExercise.getId() + "/modeling-submissions", submittedSubmission, HttpStatus.OK, null);
+        request.postWithoutLocation("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submissions", submittedSubmission, HttpStatus.OK, null);
     }
 
     @Test
     @WithMockUser(username = TEST_PREFIX + "student3", roles = "USER")
     void saveExercise_beforeDueDate() throws Exception {
-        ModelingSubmission storedSubmission = request.postWithResponseBody("/api/exercises/" + classExercise.getId() + "/modeling-submissions", unsubmittedSubmission,
+        ModelingSubmission storedSubmission = request.postWithResponseBody("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submissions", unsubmittedSubmission,
                 ModelingSubmission.class, HttpStatus.OK);
         assertThat(storedSubmission.isSubmitted()).isTrue();
     }
@@ -888,7 +800,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         afterDueDateParticipation.setInitializationDate(ZonedDateTime.now());
         studentParticipationRepository.saveAndFlush(afterDueDateParticipation);
 
-        ModelingSubmission storedSubmission = request.postWithResponseBody("/api/exercises/" + classExercise.getId() + "/modeling-submissions", unsubmittedSubmission,
+        ModelingSubmission storedSubmission = request.postWithResponseBody("/api/modeling/exercises/" + classExercise.getId() + "/modeling-submissions", unsubmittedSubmission,
                 ModelingSubmission.class, HttpStatus.OK);
         assertThat(storedSubmission.isSubmitted()).isFalse();
     }
@@ -912,14 +824,14 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         createResult(AssessmentType.AUTOMATIC_ATHENA, submission, participation, null);
         createResult(AssessmentType.MANUAL, submission, participation, null);
 
-        List<Submission> submissions = request.getList("/api/participations/" + participation.getId() + "/submissions-with-results", HttpStatus.OK, Submission.class);
+        List<Submission> submissions = request.getList("/api/modeling/participations/" + participation.getId() + "/submissions-with-results", HttpStatus.OK, Submission.class);
 
         // Verify that only the ATHENA result is returned
         assertThat(submissions).hasSize(1);
-        Submission returnedSubmission = submissions.get(0);
+        Submission returnedSubmission = submissions.getFirst();
         assertThat(returnedSubmission.getResults()).hasSize(1);
-        assertThat(returnedSubmission.getResults().get(0).getAssessmentType()).isEqualTo(AssessmentType.AUTOMATIC_ATHENA);
-        assertThat(returnedSubmission.getResults().get(0).getAssessor()).isNull(); // Sensitive info filtered
+        assertThat(returnedSubmission.getResults().getFirst().getAssessmentType()).isEqualTo(AssessmentType.AUTOMATIC_ATHENA);
+        assertThat(returnedSubmission.getResults().getFirst().getAssessor()).isNull(); // Sensitive info filtered
     }
 
     @Test
@@ -942,15 +854,15 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         createResult(AssessmentType.AUTOMATIC_ATHENA, submission, participation, null);
         createResult(AssessmentType.MANUAL, submission, participation, null);
 
-        List<Submission> submissions = request.getList("/api/participations/" + participation.getId() + "/submissions-with-results", HttpStatus.OK, Submission.class);
+        List<Submission> submissions = request.getList("/api/modeling/participations/" + participation.getId() + "/submissions-with-results", HttpStatus.OK, Submission.class);
 
         // Verify that only the ATHENA result is returned before the assessment due date
         assertThat(submissions).hasSize(1);
-        Submission returnedSubmission = submissions.get(0);
+        Submission returnedSubmission = submissions.getFirst();
         assertThat(returnedSubmission.getResults()).hasSize(1);
-        assertThat(returnedSubmission.getResults().get(0).getAssessmentType()).isEqualTo(AssessmentType.AUTOMATIC_ATHENA);
+        assertThat(returnedSubmission.getResults().getFirst().getAssessmentType()).isEqualTo(AssessmentType.AUTOMATIC_ATHENA);
         // Sensitive information should be filtered
-        assertThat(returnedSubmission.getResults().get(0).getAssessor()).isNull();
+        assertThat(returnedSubmission.getResults().getFirst().getAssessor()).isNull();
     }
 
     @Test
@@ -972,11 +884,11 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         createResult(AssessmentType.AUTOMATIC_ATHENA, submission, participation, null);
         createResult(AssessmentType.MANUAL, submission, participation, null);
 
-        List<Submission> submissions = request.getList("/api/participations/" + participation.getId() + "/submissions-with-results", HttpStatus.OK, Submission.class);
+        List<Submission> submissions = request.getList("/api/modeling/participations/" + participation.getId() + "/submissions-with-results", HttpStatus.OK, Submission.class);
 
         // Verify that both results are returned after the assessment due date
         assertThat(submissions).hasSize(1);
-        Submission returnedSubmission = submissions.get(0);
+        Submission returnedSubmission = submissions.getFirst();
         assertThat(returnedSubmission.getResults()).hasSize(2);
         // Sensitive information should be filtered
         returnedSubmission.getResults().forEach(result -> assertThat(result.getAssessor()).isNull());
@@ -995,7 +907,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         participation.addSubmission(submission);
         studentParticipationRepository.save(participation);
 
-        List<Submission> submissions = request.getList("/api/participations/" + participation.getId() + "/submissions-with-results", HttpStatus.OK, Submission.class);
+        List<Submission> submissions = request.getList("/api/modeling/participations/" + participation.getId() + "/submissions-with-results", HttpStatus.OK, Submission.class);
 
         assertThat(submissions).isEmpty();
     }
@@ -1008,7 +920,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         StudentParticipation participation = participationUtilService.createAndSaveParticipationForExercise(classExercise, TEST_PREFIX + "student2");
 
         // When & Then
-        request.getList("/api/participations/" + participation.getId() + "/submissions-with-results", HttpStatus.FORBIDDEN, Submission.class);
+        request.getList("/api/modeling/participations/" + participation.getId() + "/submissions-with-results", HttpStatus.FORBIDDEN, Submission.class);
     }
 
     @Test
@@ -1027,13 +939,13 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         User tutor = userUtilService.getUserByLogin(TEST_PREFIX + "tutor1");
         createResult(AssessmentType.MANUAL, submission, participation, tutor);
 
-        List<Submission> submissions = request.getList("/api/participations/" + participation.getId() + "/submissions-with-results", HttpStatus.OK, Submission.class);
+        List<Submission> submissions = request.getList("/api/modeling/participations/" + participation.getId() + "/submissions-with-results", HttpStatus.OK, Submission.class);
 
         assertThat(submissions).hasSize(1);
-        Submission returnedSubmission = submissions.get(0);
+        Submission returnedSubmission = submissions.getFirst();
         assertThat(returnedSubmission.getResults()).hasSize(1);
         // Verify that the tutor can see the manual result
-        Result returnedResult = returnedSubmission.getResults().get(0);
+        Result returnedResult = returnedSubmission.getResults().getFirst();
         assertThat(returnedResult.getAssessmentType()).isEqualTo(AssessmentType.MANUAL);
         assertThat(returnedResult.getAssessor()).isNull();
     }
@@ -1052,7 +964,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
 
         // When & Then
         // Attempt to get submissions for a non-modeling exercise
-        request.getList("/api/participations/" + participation.getId() + "/submissions-with-results", HttpStatus.BAD_REQUEST, Submission.class);
+        request.getList("/api/modeling/participations/" + participation.getId() + "/submissions-with-results", HttpStatus.BAD_REQUEST, Submission.class);
     }
 
     private void checkDetailsHidden(ModelingSubmission submission, boolean isStudent) {
@@ -1067,11 +979,11 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
     }
 
     private ModelingSubmission performInitialModelSubmission(Long exerciseId, ModelingSubmission submission) throws Exception {
-        return request.postWithResponseBody("/api/exercises/" + exerciseId + "/modeling-submissions", submission, ModelingSubmission.class, HttpStatus.OK);
+        return request.postWithResponseBody("/api/modeling/exercises/" + exerciseId + "/modeling-submissions", submission, ModelingSubmission.class, HttpStatus.OK);
     }
 
     private ModelingSubmission performUpdateOnModelSubmission(Long exerciseId, ModelingSubmission submission) throws Exception {
-        return request.putWithResponseBody("/api/exercises/" + exerciseId + "/modeling-submissions", submission, ModelingSubmission.class, HttpStatus.OK);
+        return request.putWithResponseBody("/api/modeling/exercises/" + exerciseId + "/modeling-submissions", submission, ModelingSubmission.class, HttpStatus.OK);
     }
 
     private ModelingSubmission generateSubmittedSubmission() {
